--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="cards">
                 <div class="card--conteudo" data-aos="zoom-in">
                     <div class="img--html" style="display: flex; justify-content: center;">
-                        <img src="htmlimg.svg" alt="" id="html--img">
+                        <img src="/htmlimg.svg" alt="" id="html--img">
                     </div>
                     <div class="conteudo">
                         <h1 style="font-size: 30px; font-weight:800; margin-top: 40px;">HTML</h1>
@@ -79,7 +79,7 @@
 
                 <div class="card--conteudo" data-aos="zoom-in">
                     <div class="img--html" style="display: flex; justify-content: center;">
-                        <img src="css-img.svg" alt="" id="html--img">
+                        <img src="/css-img.svg" alt="" id="html--img">
                     </div>
                     <div class="conteudo">
                         <h1 style="font-size: 30px; font-weight:800; margin-top: 40px;">CSS</h1>
@@ -95,7 +95,7 @@
 
                 <div class="card--conteudo" data-aos="zoom-in">
                     <div class="img--html" style="display: flex; justify-content: center;">
-                        <img src="jsimagem.avif" alt="" id="html--img">
+                        <img src="/jsimagem.avif" alt="" id="html--img">
                     </div>
                     <div class="conteudo">
                         <h1 style="font-size: 30px; font-weight:800; margin-top: 40px;">JavaScript</h1>
